# biscuit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
midap/: utils.py
midap/data_examples/: DC10B_FM595_10ugmL_oilp21_092.tif  deepbacs_BSubtilis_fluo_test9.tif  deepbacs_BSubtilis_test2.tif  deepbacs_EColi_brightfield_pos2_fr_1.tif  deepbacs_EColi_brightfield_pos7_fr_80.tif  mitochondria_kasthuri_test1079.tif  mitochondria_luchi_test0114.tif
midap/midap_jupyter/: segmentation_jupyter.py
midap/segmentation/: base_segmentator.py  bmz_segmentator_jupyter.py  cellpose_segmentator_jupyter.py  omni_segmentator_jupyter.py  stardist_segmentator_jupyter.py
model_list/: model_list.csv
notebook/: biscuit_google_colab.ipynb
