[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biscuit"
version = "0.0.1"
description = "Biscuit: tools and notebooks for microscopy segmentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

# Core runtime dependencies
dependencies = [
  "btrack==0.4.6",
  "gitpython>=3.1.40",
  "omnipose==0.4.4",
  "opencv-python>=4.8.1",
  "pandas>=2.0.2",
  "scikit-image>=0.19.3,<=0.20.0",
  "stardist>=0.8.5",
  "tensorflow==2.15.0",
  "tqdm>=4.65.0",
  "mpl_interactions",
  "ipympl",
  "napari[all]",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "coverage>=7.3.2",
  "build",
  "twine",
  "jupyterlab==4.0.8",
]
colab = [
  "jupyterlab==4.0.8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["midap*"]

[tool.setuptools.package-data]
midap = [
  "**/*.json",
  "**/*.yaml",
  "**/*.yml",
  "**/*.txt",
  "**/*.csv",
  "**/*.png",
  "**/*.pth",
  "**/*.pt",
]
